RESOLVED FIXED165697
Fullscreen in WebKit2 does not restore topContentInset upon exiting; leaves top of page not visible
https://bugs.webkit.org/show_bug.cgi?id=165697
Summary Fullscreen in WebKit2 does not restore topContentInset upon exiting; leaves t...
Jer Noble
Reported 2016-12-09 15:58:47 PST
Fullscreen in WebKit2 does not restore topContentInset upon exiting; leaves top of page not visible
Attachments
Patch (1.51 KB, patch)
2016-12-09 15:59 PST, Jer Noble
no flags
Patch (8.48 KB, patch)
2016-12-12 11:08 PST, Jer Noble
no flags
Patch (8.52 KB, patch)
2016-12-12 14:49 PST, Jer Noble
no flags
Patch (7.50 KB, patch)
2016-12-12 16:52 PST, Jer Noble
thorton: review+
Patch for landing (7.26 KB, patch)
2016-12-13 10:28 PST, Jer Noble
no flags
Patch for landing (7.25 KB, patch)
2016-12-13 10:33 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-12-09 15:59:23 PST
Darin Adler
Comment 2 2016-12-09 21:15:36 PST
Comment on attachment 296729 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=296729&action=review No way to regression-test? > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:421 > + _page->setTopContentInset(_savedTopContentInset); Can we make this share some code? At least three lines of this code are identical to part of finishedEnterFullScreenAnimation: and all five lines are the same although for some reason they are not in the same order here and there. We should make the two methods share as much as possible, to help us avoid bugs like this one.
Jer Noble
Comment 3 2016-12-12 11:08:03 PST
Jer Noble
Comment 4 2016-12-12 14:49:51 PST
Tim Horton
Comment 5 2016-12-12 15:35:14 PST
Comment on attachment 296952 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=296952&action=review > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:521 > + if ([_webView isKindOfClass:[WKWebView class]]) { This should go through PageClient and be implemented in WebViewImpl for Mac.
Jer Noble
Comment 6 2016-12-12 15:39:34 PST
(In reply to comment #5) > Comment on attachment 296952 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=296952&action=review > > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:521 > > + if ([_webView isKindOfClass:[WKWebView class]]) { > > This should go through PageClient and be implemented in WebViewImpl for Mac. Tim told me (in person) to ignore the fact he said this.
Jer Noble
Comment 7 2016-12-12 16:52:40 PST
Tim Horton
Comment 8 2016-12-13 10:24:50 PST
Comment on attachment 296970 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=296970&action=review > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.h:63 > + bool _savedAutomaticallyAdjustsContentInsets; Don't think you use this anymore? > Tools/TestWebKitAPI/Tests/WebKit2Cocoa/FullscreenTopContentInset.mm:61 > + [webView _setAutomaticallyAdjustsContentInsets:NO]; Do you still need this? I don't think it's on by default, is it?
Jer Noble
Comment 9 2016-12-13 10:26:21 PST
(In reply to comment #8) > Comment on attachment 296970 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=296970&action=review > > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.h:63 > > + bool _savedAutomaticallyAdjustsContentInsets; > > Don't think you use this anymore? Good point. > > Tools/TestWebKitAPI/Tests/WebKit2Cocoa/FullscreenTopContentInset.mm:61 > > + [webView _setAutomaticallyAdjustsContentInsets:NO]; > > Do you still need this? I don't think it's on by default, is it? It is on Mac. Thanks!
Jer Noble
Comment 10 2016-12-13 10:28:57 PST
Created attachment 297020 [details] Patch for landing
Jer Noble
Comment 11 2016-12-13 10:33:43 PST
Created attachment 297022 [details] Patch for landing
Jon Lee
Comment 12 2016-12-13 10:37:22 PST
WebKit Commit Bot
Comment 13 2016-12-13 15:37:50 PST
Comment on attachment 297022 [details] Patch for landing Clearing flags on attachment: 297022 Committed r209782: <http://trac.webkit.org/changeset/209782>
Note You need to log in before you can comment on or make changes to this bug.